--- a/SimDeploy/en.lproj/MainMenu.xib
+++ b/SimDeploy/en.lproj/MainMenu.xib
@@ -378,15 +378,15 @@ Gw
         </customObject>
         <customObject id="692" customClass="SUUpdater"/>
         <customView wantsLayer="YES" id="685" userLabel="Application Info View" customClass="SMAppInstallView">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="256"/>
+            <rect key="frame" x="0.0" y="0.0" width="360" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView wantsLayer="YES" id="720" userLabel="Icon Container" customClass="SMIconView">
-                    <rect key="frame" x="20" y="123" width="118" height="118"/>
+                    <rect key="frame" x="20" y="87" width="118" height="118"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </customView>
                 <textField verticalHuggingPriority="750" id="731">
-                    <rect key="frame" x="143" y="177" width="200" height="34"/>
+                    <rect key="frame" x="143" y="141" width="200" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Label" id="732">
                         <font key="font" metaFont="system"/>
@@ -395,7 +395,7 @@ Gw
                     </textFieldCell>
                 </textField>
                 <textField verticalHuggingPriority="750" id="763">
-                    <rect key="frame" x="143" y="140" width="200" height="33"/>
+                    <rect key="frame" x="143" y="104" width="200" height="33"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Installed Version" id="764">
                         <font key="font" metaFont="system"/>
@@ -404,7 +404,7 @@ Gw
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" id="750">
-                    <rect key="frame" x="190" y="14" width="150" height="19"/>
+                    <rect key="frame" x="190" y="10" width="150" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="recessed" title="Install" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="751">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -415,7 +415,7 @@ Gw
                     </buttonCell>
                 </button>
                 <button verticalHuggingPriority="750" id="766">
-                    <rect key="frame" x="20" y="14" width="150" height="19"/>
+                    <rect key="frame" x="20" y="10" width="150" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="recessed" title="Cancel" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="767">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -429,11 +429,11 @@ Gw
                     </connections>
                 </button>
                 <customView id="772" customClass="SMDividerView">
-                    <rect key="frame" x="0.0" y="49" width="360" height="2"/>
+                    <rect key="frame" x="0.0" y="45" width="360" height="2"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </customView>
                 <textField verticalHuggingPriority="750" id="813">
-                    <rect key="frame" x="143" y="212" width="200" height="25"/>
+                    <rect key="frame" x="143" y="176" width="200" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <textFieldCell key="cell" lineBreakMode="truncatingMiddle" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Labey" id="814">
                         <font key="font" size="20" name="HelveticaNeue-Bold"/>
@@ -442,7 +442,7 @@ Gw
                     </textFieldCell>
                 </textField>
                 <button id="837">
-                    <rect key="frame" x="33" y="95" width="99" height="20"/>
+                    <rect key="frame" x="33" y="59" width="99" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="bevel" title="Clean Install" bezelStyle="regularSquare" image="unchecked" imagePosition="left" alignment="center" alternateImage="checked" inset="2" id="838">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -453,11 +453,11 @@ Gw
                     </connections>
                 </button>
                 <popUpButton verticalHuggingPriority="750" id="HWi-KR-OAD">
-                    <rect key="frame" x="29" y="62" width="202" height="28"/>
+                    <rect key="frame" x="145" y="55" width="202" height="28"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" title="Devices" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="LTC-I3-Jkp" id="icT-5U-Jt3">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
+                        <font key="font" metaFont="menu"/>
                         <menu key="menu" title="OtherViews" id="qsK-tt-lrL">
                             <items>
                                 <menuItem title="Devices" state="on" id="LTC-I3-Jkp"/>
