--- a/SimDeploy/en.lproj/MainMenu.xib
+++ b/SimDeploy/en.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A1900" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1060" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -371,6 +371,7 @@ Gw
                 <outlet property="mainWindow" destination="666" id="816"/>
                 <outlet property="orLabel" destination="849" id="851"/>
                 <outlet property="progressIndicator" destination="806" id="807"/>
+                <outlet property="refreshButton" destination="0Nr-Xa-QHk" id="t3S-bx-ubE"/>
                 <outlet property="simSelectionPopup" destination="j5F-ax-Wwa" id="Ffh-7O-p6Y"/>
                 <outlet property="titleLabel" destination="813" id="815"/>
                 <outlet property="urlLabel" destination="547" id="847"/>
@@ -379,7 +380,7 @@ Gw
         </customObject>
         <customObject id="692" customClass="SUUpdater"/>
         <customView wantsLayer="YES" id="685" userLabel="Application Info View" customClass="SMAppInstallView">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="361" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView wantsLayer="YES" id="720" userLabel="Icon Container" customClass="SMIconView">
@@ -405,7 +406,7 @@ Gw
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" id="750">
-                    <rect key="frame" x="190" y="10" width="150" height="19"/>
+                    <rect key="frame" x="240" y="10" width="101" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="recessed" title="Install" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="751">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -416,7 +417,7 @@ Gw
                     </buttonCell>
                 </button>
                 <button verticalHuggingPriority="750" id="766">
-                    <rect key="frame" x="20" y="10" width="150" height="19"/>
+                    <rect key="frame" x="20" y="10" width="102" height="19"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="recessed" title="Cancel" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="767">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -427,6 +428,20 @@ Gw
                     </buttonCell>
                     <connections>
                         <action selector="cancelInstall:" target="538" id="775"/>
+                    </connections>
+                </button>
+                <button verticalHuggingPriority="750" id="0Nr-Xa-QHk">
+                    <rect key="frame" x="130" y="10" width="102" height="19"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="recessed" title="Refresh" bezelStyle="recessed" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="hCg-cX-pQF">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                        <font key="font" metaFont="systemBold" size="12"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                    </buttonCell>
+                    <connections>
+                        <action selector="refreshDevices:" target="538" id="dXc-I2-i98"/>
                     </connections>
                 </button>
                 <customView id="772" customClass="SMDividerView">
@@ -443,7 +458,7 @@ Gw
                     </textFieldCell>
                 </textField>
                 <button id="837">
-                    <rect key="frame" x="33" y="59" width="99" height="20"/>
+                    <rect key="frame" x="30" y="59" width="99" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="bevel" title="Clean Install" bezelStyle="regularSquare" image="unchecked" imagePosition="left" alignment="center" alternateImage="checked" inset="2" id="838">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
